--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Get Shit Done Kit by Creative Tim</title>
+	<title>Home | Beachers </title>
 
     <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
 	<link href="assets/css/get-shit-done.css" rel="stylesheet" />
@@ -19,7 +19,7 @@
      <a href="http://creative-tim.com">
          <div class="logo-container">
             <div class="logo">
-                <img src="assets/img/new_logo.png">
+                <img src="assets/img/beacher_logo.png">
             </div>
             <div class="brand">
                 Creative Tim
