--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <a href="http://creative-tim.com">
          <div class="logo-container">
             <div class="logo">
-                <img src="assets/img/beacher_logo.png">
+                <img src="assets/img/" alt="b">
             </div>
             <div class="brand">
                 Creative Tim
