--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="assets/img/" alt="b">
             </div>
             <div class="brand">
-                Creative Tim
+                Beachers
             </div>
         </div>
     </a>
@@ -31,8 +31,8 @@
         <div class="border no-right-border">Sh</div><div class="border">it</div>
         <div>Done</div>
     </div>
-  <div class="img-src" style="background-image: url('assets/img/cover_4.jpg')"></div>
-  <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div>
+  <div class="img-src" style="background-image: url('assets/img/beach_love_logo.jpg')"></div>
+  <div class='img-src blur' style="background-image: url('assets/img/beach_love_logo.jpg')"></div>
 </div>
 
 <div class="main">
