--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Link</a></li>
+                <li class="active"><a href="#">Blog</a></li>
                 <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                       <ul class="dropdown-menu">
@@ -75,7 +76,7 @@
           </div><!-- /.container-fluid -->
         </nav>
      <div class="blurred-container">
-            <div class="img-src" style="background-image: url('assets/img/bg.jpg')"></div>
+            <div class="img-src" style="background-image: url('assets/img/beach_love_logo.jpg')"></div>
         </div>
     </div><!--  end navbar -->
 
