--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">GSDKit</a>
+              <a class="navbar-brand" href="#">BEACHER</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,15 +46,15 @@
                 <li class="active"><a href="#">Link</a></li>
                 <li class="active"><a href="#">Blog</a></li>
                 <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Events <b class="caret"></b></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something</a></li>
+                        <li><a href="#">28-03-2016</a></li>
+                        <li><a href="#">14-02-2016</a></li>
+                        <li><a href="#">01-01-2016</a></li>
+                        <li><a href="#">25-12-2015</a></li>
+                        <li><a href="#">09-09-2015</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">View Calender</a></li>
                       </ul>
                 </li>
                 <li>
