--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 </head>
 
 <body>
+	
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+	
  <div id="navbar-full">
     <div id="navbar">
     <!--    
@@ -81,6 +91,21 @@
     </div><!--  end navbar -->
 
 </div> <!-- end menu-dropdown -->
+
+<div>
+	<section>
+		<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+	</section>
+</div>
+
+
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px; padding-top:100px">
