--- a/index.html
+++ b/index.html
@@ -94,14 +94,7 @@
 
 <div>
 	<section>
-		<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+		<div class="fb-comments" data-href="http://beachers.github.io/web/index.html" data-width="100%" data-numposts="7"></div>
 	</section>
 </div>
 
