--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	
-	<div id="fb-root"></div>
+<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -94,7 +94,7 @@
 
 <div>
 	<section>
-		<div class="fb-comments" data-href="http://beachers.github.io/web/index.html" data-width="100%" data-numposts="7"></div>
+		<div class="fb-comments" data-href="http://beachers.github.io/web/index.html" data-width="500px" data-numposts="7"></div>
 	</section>
 </div>
 
