--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
 
 <body>
 	
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1046848072054555',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
 	
  <div id="navbar-full">
     <div id="navbar">
@@ -92,11 +102,11 @@
 
 </div> <!-- end menu-dropdown -->
 
-<div>
+<div><!--
 	<section>
 		<div class="fb-comments" data-href="http://beachers.github.io/web/index.html" data-width="500px" data-numposts="7"></div>
 	</section>
-</div>
+</div>-->
 
 
 
